Full first page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,28 @@
         </div>
         <div class="slider">
             <div class="slider__wrapper">
-                yops
+                <div class="slider__body">
+                    <div class="slider__title">
+                        We Deliver<br />
+                        With Speed
+                    </div>
+                    <hr>
+                    <div class="slider__description">
+                        When an unknown printer took a galley of type and scrambled<br />
+                        it to make a type specimen book. It has survived not only five centuries
+                    </div>
+                    <div class="slider__points">
+                        <ul>
+                            <li>AMAZING</li>
+                            <li>QUICK</li>
+                            <li>24/7 SUPPORT</li>
+                        </ul>
+                    </div>
+                    <div class="slider__buttons">
+                        <div class="slider__btn active"><a>LEARN MORE</a></div>
+                        <div class="slider__btn"><a>DHL WORLDWIDE</a></div>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
