--- a/index.html
+++ b/index.html
@@ -73,6 +73,64 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="services__body">
+            <div class="services__content">
+
+                <div class="services__title_w">
+                    Services
+                    <div class="services__title">
+                        Awesome Services
+                    </div>
+                </div>
+                
+                <div class="services__cards">
+                    <div class="services__card">
+                        <img src="img/services/Card1.png" alt="card1">
+                        <h2>Express services</h2>
+                        <p>
+                            When an unknown printer took a galley of type and scrambled it to make a type specimen.
+                        </p>
+                        <div class="btn">
+                            <a href="#">Read More <i class="fas fa-caret-right"></i></a>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <img src="img/services/Card2.png" alt="card1">
+                        <h2>Parcel & Ecommerce</h2>
+                        <p>
+                            When an unknown printer took a galley of type and scrambled it to make a type specimen.
+                        </p>
+                        <div class="btn">
+                            <a href="#">Read More <i class="fas fa-caret-right"></i></a>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <img src="img/services/Card3.png" alt="card1">
+                        <h2>Frieght transport</h2>
+                        <p>
+                            When an unknown printer took a galley of type and scrambled it to make a type specimen.
+                        </p>
+                        <div class="btn">
+                            <a href="#">Read More <i class="fas fa-caret-right"></i></a>
+                        </div>
+                    </div>
+                    <div class="services__form">
+                        <h2>DHI Worldwide</h2>
+                        <p>Some text which should be cool. Danila topchik :3</p>
+                        <div class="form__list">
+                            <div class="list__name">Location</div>
+                            <div class="list__btn"><i class="fas fa-chevron-down"></i></div>
+                        </div>
+                        <div class="form__btn"><a>EXPLORE</a></div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+    </main>
 
 </body>
 </html>
