--- a/index.html
+++ b/index.html
@@ -129,6 +129,40 @@
             </div>
         </div>
 
+        <div class="about__body">
+            <div class="about__hello">
+                <div class="hello__wrapper">
+                    <h2>One of the best international service provider</h2>
+                    <div class="play__btn"><i class="fas fa-caret-right"></i></div>
+                </div>
+            </div>
+            <div class="about__cards">
+                <div class="about__card">
+                    <img src="img/services/Card1.png" alt="Wow">
+                    <h2>Aerospace provider</h2>
+                    <div class="point"><i class="fas fa-caret-right"></i> When an unknown printer took.</div>
+                    <div class="point"><i class="fas fa-caret-right"></i> Some text to be looking cool.</div>
+                    <div class="point"><i class="fas fa-caret-right"></i> I really love this work.</div>
+                    <div class="point"><i class="fas fa-caret-right"></i> OMG. GG. LOL. KEK. CHEBUREK.</div>
+                </div>
+                <div class="about__card">
+                    <img src="img/services/Card2.png" alt="Wow">
+                    <h2>Aerospace provider</h2>
+                    <div class="point"><i class="fas fa-caret-right"></i> When an unknown printer took.</div>
+                    <div class="point"><i class="fas fa-caret-right"></i> Some text to be looking cool.</div>
+                    <div class="point"><i class="fas fa-caret-right"></i> I really love this work.</div>
+                    <div class="point"><i class="fas fa-caret-right"></i> OMG. GG. LOL. KEK. CHEBUREK.</div>
+                </div>
+                <div class="about__card">
+                    <img src="img/services/Card3.png" alt="Wow">
+                    <h2>Aerospace provider</h2>
+                    <div class="point"><i class="fas fa-caret-right"></i> When an unknown printer took.</div>
+                    <div class="point"><i class="fas fa-caret-right"></i> Some text to be looking cool.</div>
+                    <div class="point"><i class="fas fa-caret-right"></i> I really love this work.</div>
+                    <div class="point"><i class="fas fa-caret-right"></i> OMG. GG. LOL. KEK. CHEBUREK.</div>
+                </div>
+            </div>
+        </div>
 
     </main>
 
