--- a/index.html
+++ b/index.html
@@ -136,35 +136,152 @@
                     <div class="play__btn"><i class="fas fa-caret-right"></i></div>
                 </div>
             </div>
-            <div class="about__cards">
-                <div class="about__card">
-                    <img src="img/services/Card1.png" alt="Wow">
-                    <h2>Aerospace provider</h2>
-                    <div class="point"><i class="fas fa-caret-right"></i> When an unknown printer took.</div>
-                    <div class="point"><i class="fas fa-caret-right"></i> Some text to be looking cool.</div>
-                    <div class="point"><i class="fas fa-caret-right"></i> I really love this work.</div>
-                    <div class="point"><i class="fas fa-caret-right"></i> OMG. GG. LOL. KEK. CHEBUREK.</div>
-                </div>
-                <div class="about__card">
-                    <img src="img/services/Card2.png" alt="Wow">
-                    <h2>Aerospace provider</h2>
-                    <div class="point"><i class="fas fa-caret-right"></i> When an unknown printer took.</div>
-                    <div class="point"><i class="fas fa-caret-right"></i> Some text to be looking cool.</div>
-                    <div class="point"><i class="fas fa-caret-right"></i> I really love this work.</div>
-                    <div class="point"><i class="fas fa-caret-right"></i> OMG. GG. LOL. KEK. CHEBUREK.</div>
-                </div>
-                <div class="about__card">
-                    <img src="img/services/Card3.png" alt="Wow">
-                    <h2>Aerospace provider</h2>
-                    <div class="point"><i class="fas fa-caret-right"></i> When an unknown printer took.</div>
-                    <div class="point"><i class="fas fa-caret-right"></i> Some text to be looking cool.</div>
-                    <div class="point"><i class="fas fa-caret-right"></i> I really love this work.</div>
-                    <div class="point"><i class="fas fa-caret-right"></i> OMG. GG. LOL. KEK. CHEBUREK.</div>
+            <div class="about__wrapper">
+                <div class="about__cards">
+                    <div class="about__card">
+                        <img src="img/services/Card1.png" alt="Wow">
+                        <h2>Aerospace provider</h2>
+                        <div class="point"><i class="fas fa-caret-right"></i> When an unknown printer took.</div>
+                        <div class="point"><i class="fas fa-caret-right"></i> Some text to be looking cool.</div>
+                        <div class="point"><i class="fas fa-caret-right"></i> I really love this work.</div>
+                        <div class="point"><i class="fas fa-caret-right"></i> OMG. GG. LOL. KEK. CHEBUREK.</div>
+                    </div>
+                    <div class="about__card">
+                        <img src="img/services/Card2.png" alt="Wow">
+                        <h2>Poppins proved</h2>
+                        <div class="point"><i class="fas fa-caret-right"></i> When an unknown printer took.</div>
+                        <div class="point"><i class="fas fa-caret-right"></i> Some text to be looking cool.</div>
+                        <div class="point"><i class="fas fa-caret-right"></i> I really love this work.</div>
+                        <div class="point"><i class="fas fa-caret-right"></i> OMG. GG. LOL. KEK. CHEBUREK.</div>
+                    </div>
+                    <div class="about__card">
+                        <img src="img/services/Card3.png" alt="Wow">
+                        <h2>Airline Specimen</h2>
+                        <div class="point"><i class="fas fa-caret-right"></i> When an unknown printer took.</div>
+                        <div class="point"><i class="fas fa-caret-right"></i> Some text to be looking cool.</div>
+                        <div class="point"><i class="fas fa-caret-right"></i> I really love this work.</div>
+                        <div class="point"><i class="fas fa-caret-right"></i> OMG. GG. LOL. KEK. CHEBUREK.</div>
+                    </div>
                 </div>
             </div>
         </div>
 
+        <div class="express_logistics__body">
+            <div class="filter__form">
+                <div class="filter__headers">
+                    <div class="filter__express">Express</div>
+                    <div class="filter__logistics">Logistics</div>
+                </div>
+                <div class="filters__wrapper">
+                    <div class="filter__point">
+                        <div class="filter__title">
+                            <div><span>Track your shipment</span></div>
+                            <div><i class="fas fa-chevron-down"></i></div>
+                        </div>
+                    </div>
+                    <div class="filter__point">
+                        <div class="filter__title">
+                            <div><span>New login</span></div>
+                            <div><i class="fas fa-chevron-down"></i></div>
+                        </div>
+                    </div>
+                    <div class="filter__point">
+                        <div class="filter__title">
+                            <div><span>Find DHL point</span></div>
+                            <div><i class="fas fa-chevron-down"></i></div>
+                        </div>
+                    </div>
+                    <div class="filter__point opened">
+                        <div class="filter__title">
+                            <div><span>Find a service</span></div>
+                            <div><i class="fas fa-chevron-up"></i></div>
+                        </div>
+                        <div class="filter__body">
+                            <h2>International Services to Another Country</h2>
+                            <ul>
+                                <li><i class="fas fa-caret-right"></i> Emergency</li>
+                                <li><i class="fas fa-caret-right"></i> Time Critical</li>
+                                <li><i class="fas fa-caret-right"></i> Less Urgent</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="image__body">
+                <div class="image__border"></div>
+                <div class="image__wrapper">
+                    <div class="image"><img src="img/dhl-logo.png" alt=""></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="features__body">
+            <div class="features__info">
+                <h2>Excellence. Simply delivered.</h2>
+                <p>International express deliveries; global freight forwarding by air, sea, road and rail;<br/>
+                    warehousing solutions from packaging, to repairs, to storage; mail deliveries worldwide;<br/>
+                    and other customized logistic services – with everything DHL does, we<br/>
+                    help connect people and improve their lives.</p>
+            </div>
+            <div class="features__button">Learn more</div>
+        </div>
+
+        <div class="clients__body">
+            <div class="client">
+                <img src="img/clients/client.png" alt="">
+            </div>
+            <div class="client">
+                <img src="img/clients/client.png" alt="">
+            </div>
+            <div class="client">
+                <img src="img/clients/client.png" alt="">
+            </div>
+            <div class="client">
+                <img src="img/clients/client.png" alt="">
+            </div>
+        </div>
     </main>
 
+    <footer>
+        <div class="left_side_image">
+            <img src="img/footer/left-side-img.png" alt="">
+        </div>
+        <div class="footer__content">
+            <div class="footer__item">
+                <h2>Contact center</h2>
+                <ul>
+                    <li><i class="fas fa-caret-right"></i> DHL Express</li>
+                    <li><i class="fas fa-caret-right"></i> DHL Parcel&Ecommerce</li>
+                    <li><i class="fas fa-caret-right"></i> DHL Global Forwarding</li>
+                    <li><i class="fas fa-caret-right"></i> DHL Freight</li>
+                    <li><i class="fas fa-caret-right"></i> DHL Supply Chain</li>
+                </ul>
+            </div>
+            <div class="footer__item">
+                <h2>About us</h2>
+                <ul>
+                    <li><i class="fas fa-caret-right"></i> Partnership</li>
+                    <li><i class="fas fa-caret-right"></i> Company portrait</li>
+                    <li><i class="fas fa-caret-right"></i> DHL Global Forwarding</li>
+                    <li><i class="fas fa-caret-right"></i> Green solutions</li>
+                    <li><i class="fas fa-caret-right"></i> Innovation</li>
+                </ul>
+            </div>
+            <div class="footer__item">
+                <h2>Social media</h2>
+                <ul>
+                    <li><i class="fas fa-caret-right"></i> Facebook</li>
+                    <li><i class="fas fa-caret-right"></i> Dribble</li>
+                    <li><i class="fas fa-caret-right"></i> Behance</li>
+                    <li><i class="fas fa-caret-right"></i> Gmail</li>
+                    <li><i class="fas fa-caret-right"></i> Twitter</li>
+                </ul>
+            </div>
+        </div>
+        <div class="right_side_image">
+            <img src="img/footer/right-side-image.png" alt="">
+        </div>
+    </footer>
 </body>
 </html>
