Adaptive and animated

--- a/index.html
+++ b/index.html
@@ -11,277 +11,113 @@
 </head>
 <body>
     <header>
-        <div class="header__menu">
-            <div class="header__column">
-                <div class="header__item">
-                    <a href="#">English <i class="fas fa-chevron-down"></i></a>
-                </div>
-            </div>
-            <div class="header__column">
-                <div class="header__item">
-                    <a href="#"><i class="fas fa-gift"></i> Contact center</a>
-                </div>
-                <div class="header__item">
-                    <a href="#">Country profile <i class="fas fa-chevron-down"></i></a>
+        <div class="navpanel">
+            <div class="grid__container">
+                <div class="nav__items">
+                    <div class="nav__item">
+                        <a href="#">English <i class="fas fa-chevron-down"></i></a>
+                    </div>
+                    <div class="nav__item">
+                        <div>
+                            <a href="#"><i class="fas fa-gift"></i> Contact Center</a>
+                        </div>
+                        <div>
+                            <a href="#">Country Profile <i class="fas fa-chevron-down"></i></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="main__menu">
-            <div class="menu__logo">
-                <img src="img/dhl-logo.png" alt="Logo">
-            </div>
-            <div class="menu__items">
-                <ul>
-                    <li>EXPRESS</li>
-                    <li>PARCEL&ECOMMERCE</li>
-                    <li>LOGISTICS</li>
-                    <li>MAIL</li>
-                    <li>PRESS</li>
-                    <li>ABOUT</li>
-                </ul>
-            </div>
-            <div class="menu__search">
-                <div>
-                    <i class="fas fa-search"></i>
+            <div class="grid__container">
+                <div class="menu__items">
+                    <div class="logo">
+                        <a href="#"><img src="/img/dhl-logo.png" alt="DHL"></a>
+                    </div>
+                    <div class="menu__item">
+                        <ul>
+                            <li><a href="#">Express</a></li>
+                            <li><a href="#">Parcel&Ecomerce</a></li>
+                            <li><a href="#">Logistics</a></li>
+                            <li><a href="#">Mail</a></li>
+                            <li><a href="#">Press</a></li>
+                            <li><a href="#">About</a></li>
+                        </ul>
+                    </div>
+                    <div class="search__btn">
+                        <i class="fas fa-search"></i>
+                    </div>
                 </div>
             </div>
         </div>
+
         <div class="slider">
-            <div class="slider__wrapper">
-                <div class="slider__body">
-                    <div class="slider__title">
-                        We Deliver<br />
-                        With Speed
-                    </div>
-                    <hr>
-                    <div class="slider__description">
-                        When an unknown printer took a galley of type and scrambled<br />
-                        it to make a type specimen book. It has survived not only five centuries
-                    </div>
-                    <div class="slider__points">
-                        <ul>
-                            <li>AMAZING</li>
-                            <li>QUICK</li>
-                            <li>24/7 SUPPORT</li>
-                        </ul>
-                    </div>
-                    <div class="slider__buttons">
-                        <div class="slider__btn active"><a>LEARN MORE</a></div>
-                        <div class="slider__btn"><a>DHL WORLDWIDE</a></div>
+            <div class="slider__cover">
+                <div class="grid__container">
+                    <div class="slider__content">
+                        <div class="slider__title">
+                            <h2>We Deliver<br>With Speed</h2>
+                        </div>
+                        <div class="slider__description">
+                            <p>When an unknown printer took a galley of type and scrambled<br>
+                                it to make a type specimen book. It has survived not only five centuries</p>
+                        </div>
+                        <div class="slider__points">
+                            <ul>
+                                <li>Amazing</li>
+                                <li>Quick</li>
+                                <li>24/7 supports</li>
+                            </ul>
+                        </div>
+                        <div class="slider__btns">
+                            <button>Learn More</button>
+                            <button>Dhl worldwide</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
     <main>
-        <div class="services__body">
-            <div class="services__content">
-
-                <div class="services__title_w">
-                    Services
+        <div class="services">
+            <div class="grid__container">
+                <div class="services__content">
                     <div class="services__title">
-                        Awesome Services
+                        <h2>Awesome Services</h2>
                     </div>
-                </div>
-                
-                <div class="services__cards">
-                    <div class="services__card">
-                        <img src="img/services/Card1.png" alt="card1">
-                        <h2>Express services</h2>
-                        <p>
-                            When an unknown printer took a galley of type and scrambled it to make a type specimen.
-                        </p>
-                        <div class="btn">
-                            <a href="#">Read More <i class="fas fa-caret-right"></i></a>
+                    <div class="services__cards">
+                        <div class="services__card">
+                            <img src="/img/services/Card1.png" alt="Card1">
+                            <h3>Express services</h3>
+                            <p>When an unknown printer took a gallery of type and scrambled it to make a type specirmen</p>
+                            <button>Read More <i class="fas fa-caret-right"></i></button>
                         </div>
-                    </div>
-                    <div class="services__card">
-                        <img src="img/services/Card2.png" alt="card1">
-                        <h2>Parcel & Ecommerce</h2>
-                        <p>
-                            When an unknown printer took a galley of type and scrambled it to make a type specimen.
-                        </p>
-                        <div class="btn">
-                            <a href="#">Read More <i class="fas fa-caret-right"></i></a>
+                        <div class="services__card">
+                            <img src="/img/services/Card1.png" alt="Card1">
+                            <h3>Express services</h3>
+                            <p>When an unknown printer took a gallery of type and scrambled it to make a type specirmen</p>
+                            <button>Read More <i class="fas fa-caret-right"></i></button>
                         </div>
-                    </div>
-                    <div class="services__card">
-                        <img src="img/services/Card3.png" alt="card1">
-                        <h2>Frieght transport</h2>
-                        <p>
-                            When an unknown printer took a galley of type and scrambled it to make a type specimen.
-                        </p>
-                        <div class="btn">
-                            <a href="#">Read More <i class="fas fa-caret-right"></i></a>
+                        <div class="services__card">
+                            <img src="/img/services/Card1.png" alt="Card1">
+                            <h3>Express services</h3>
+                            <p>When an unknown printer took a gallery of type and scrambled it to make a type specirmen</p>
+                            <button>Read More <i class="fas fa-caret-right"></i></button>
                         </div>
-                    </div>
-                    <div class="services__form">
-                        <h2>DHI Worldwide</h2>
-                        <p>Some text which should be cool. Danila topchik :3</p>
-                        <div class="form__list">
-                            <div class="list__name">Location</div>
-                            <div class="list__btn"><i class="fas fa-chevron-down"></i></div>
-                        </div>
-                        <div class="form__btn"><a>EXPLORE</a></div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="about__body">
-            <div class="about__hello">
-                <div class="hello__wrapper">
-                    <h2>One of the best international service provider</h2>
-                    <div class="play__btn"><i class="fas fa-caret-right"></i></div>
-                </div>
-            </div>
-            <div class="about__wrapper">
-                <div class="about__cards">
-                    <div class="about__card">
-                        <img src="img/services/Card1.png" alt="Wow">
-                        <h2>Aerospace provider</h2>
-                        <div class="point"><i class="fas fa-caret-right"></i> When an unknown printer took.</div>
-                        <div class="point"><i class="fas fa-caret-right"></i> Some text to be looking cool.</div>
-                        <div class="point"><i class="fas fa-caret-right"></i> I really love this work.</div>
-                        <div class="point"><i class="fas fa-caret-right"></i> OMG. GG. LOL. KEK. CHEBUREK.</div>
-                    </div>
-                    <div class="about__card">
-                        <img src="img/services/Card2.png" alt="Wow">
-                        <h2>Poppins proved</h2>
-                        <div class="point"><i class="fas fa-caret-right"></i> When an unknown printer took.</div>
-                        <div class="point"><i class="fas fa-caret-right"></i> Some text to be looking cool.</div>
-                        <div class="point"><i class="fas fa-caret-right"></i> I really love this work.</div>
-                        <div class="point"><i class="fas fa-caret-right"></i> OMG. GG. LOL. KEK. CHEBUREK.</div>
-                    </div>
-                    <div class="about__card">
-                        <img src="img/services/Card3.png" alt="Wow">
-                        <h2>Airline Specimen</h2>
-                        <div class="point"><i class="fas fa-caret-right"></i> When an unknown printer took.</div>
-                        <div class="point"><i class="fas fa-caret-right"></i> Some text to be looking cool.</div>
-                        <div class="point"><i class="fas fa-caret-right"></i> I really love this work.</div>
-                        <div class="point"><i class="fas fa-caret-right"></i> OMG. GG. LOL. KEK. CHEBUREK.</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="express_logistics__body">
-            <div class="filter__form">
-                <div class="filter__headers">
-                    <div class="filter__express">Express</div>
-                    <div class="filter__logistics">Logistics</div>
-                </div>
-                <div class="filters__wrapper">
-                    <div class="filter__point">
-                        <div class="filter__title">
-                            <div><span>Track your shipment</span></div>
-                            <div><i class="fas fa-chevron-down"></i></div>
-                        </div>
-                    </div>
-                    <div class="filter__point">
-                        <div class="filter__title">
-                            <div><span>New login</span></div>
-                            <div><i class="fas fa-chevron-down"></i></div>
-                        </div>
-                    </div>
-                    <div class="filter__point">
-                        <div class="filter__title">
-                            <div><span>Find DHL point</span></div>
-                            <div><i class="fas fa-chevron-down"></i></div>
-                        </div>
-                    </div>
-                    <div class="filter__point opened">
-                        <div class="filter__title">
-                            <div><span>Find a service</span></div>
-                            <div><i class="fas fa-chevron-up"></i></div>
-                        </div>
-                        <div class="filter__body">
-                            <h2>International Services to Another Country</h2>
-                            <ul>
-                                <li><i class="fas fa-caret-right"></i> Emergency</li>
-                                <li><i class="fas fa-caret-right"></i> Time Critical</li>
-                                <li><i class="fas fa-caret-right"></i> Less Urgent</li>
-                            </ul>
+                        <div class="services__form">
+                            <h3>Dhl worldwide</h3>
+                            <p>When an unknown printer took a gallery of type and</p>
+                            <div class="form__filter">
+                                <span>Location</span>
+                                <button><i class="fas fa-chevron-down"></i></button>
+                            </div>
+                            <button>Explore</button>
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="image__body">
-                <div class="image__border"></div>
-                <div class="image__wrapper">
-                    <div class="image"><img src="img/dhl-logo.png" alt=""></div>
-                </div>
-            </div>
-        </div>
-
-        <div class="features__body">
-            <div class="features__info">
-                <h2>Excellence. Simply delivered.</h2>
-                <p>International express deliveries; global freight forwarding by air, sea, road and rail;<br/>
-                    warehousing solutions from packaging, to repairs, to storage; mail deliveries worldwide;<br/>
-                    and other customized logistic services – with everything DHL does, we<br/>
-                    help connect people and improve their lives.</p>
-            </div>
-            <div class="features__button">Learn more</div>
-        </div>
-
-        <div class="clients__body">
-            <div class="client">
-                <img src="img/clients/client.png" alt="">
-            </div>
-            <div class="client">
-                <img src="img/clients/client.png" alt="">
-            </div>
-            <div class="client">
-                <img src="img/clients/client.png" alt="">
-            </div>
-            <div class="client">
-                <img src="img/clients/client.png" alt="">
             </div>
         </div>
     </main>
-
-    <footer>
-        <div class="left_side_image">
-            <img src="img/footer/left-side-img.png" alt="">
-        </div>
-        <div class="footer__content">
-            <div class="footer__item">
-                <h2>Contact center</h2>
-                <ul>
-                    <li><i class="fas fa-caret-right"></i> DHL Express</li>
-                    <li><i class="fas fa-caret-right"></i> DHL Parcel&Ecommerce</li>
-                    <li><i class="fas fa-caret-right"></i> DHL Global Forwarding</li>
-                    <li><i class="fas fa-caret-right"></i> DHL Freight</li>
-                    <li><i class="fas fa-caret-right"></i> DHL Supply Chain</li>
-                </ul>
-            </div>
-            <div class="footer__item">
-                <h2>About us</h2>
-                <ul>
-                    <li><i class="fas fa-caret-right"></i> Partnership</li>
-                    <li><i class="fas fa-caret-right"></i> Company portrait</li>
-                    <li><i class="fas fa-caret-right"></i> DHL Global Forwarding</li>
-                    <li><i class="fas fa-caret-right"></i> Green solutions</li>
-                    <li><i class="fas fa-caret-right"></i> Innovation</li>
-                </ul>
-            </div>
-            <div class="footer__item">
-                <h2>Social media</h2>
-                <ul>
-                    <li><i class="fas fa-caret-right"></i> Facebook</li>
-                    <li><i class="fas fa-caret-right"></i> Dribble</li>
-                    <li><i class="fas fa-caret-right"></i> Behance</li>
-                    <li><i class="fas fa-caret-right"></i> Gmail</li>
-                    <li><i class="fas fa-caret-right"></i> Twitter</li>
-                </ul>
-            </div>
-        </div>
-        <div class="right_side_image">
-            <img src="img/footer/right-side-image.png" alt="">
-        </div>
-    </footer>
 </body>
 </html>
