--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
                             <button>Read More <i class="fas fa-caret-right"></i></button>
                         </div>
                         <div class="services__card">
-                            <img src="/img/services/Card1.png" alt="Card1">
+                            <img src="/img/services/Card2.png" alt="Card1">
                             <h3>Express services</h3>
                             <p>When an unknown printer took a gallery of type and scrambled it to make a type specirmen</p>
                             <button>Read More <i class="fas fa-caret-right"></i></button>
                         </div>
                         <div class="services__card">
-                            <img src="/img/services/Card1.png" alt="Card1">
+                            <img src="/img/services/Card3.png" alt="Card1">
                             <h3>Express services</h3>
                             <p>When an unknown printer took a gallery of type and scrambled it to make a type specirmen</p>
                             <button>Read More <i class="fas fa-caret-right"></i></button>
@@ -118,6 +118,53 @@
                 </div>
             </div>
         </div>
+
+        <div class="about">
+            <div class="about__wrapper">
+                <div class="about__content">
+                    <div class="about__title">
+                        <h2>One of the best international service provider</h2>
+                    </div>
+                    <div class="about__button">
+                        <button><i class="fas fa-caret-right"></i></button>
+                    </div>
+                </div>
+                <div class="about__cards">
+                    <div class="grid__container">
+                        <div class="about__cards-wrapper">
+                            <div class="about__card">
+                                <img src="/img/services/Card1.png" alt="oops">
+                                <div class="card__content">
+                                    <h3>Aerospace Provider</h2>
+                                    <ul>
+                                        <li><i class="fas fa-caret-right"></i> Test</li>
+                                        <li><i class="fas fa-caret-right"></i> Test</li>
+                                        <li><i class="fas fa-caret-right"></i> Test</li>
+                                        <li><i class="fas fa-caret-right"></i> Test</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="about__card">
+                                <img src="/img/services/Card1.png" alt="oops">
+                                <div class="card__content">
+                                    <h3>Blah blah</h2>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </div>
+                            </div>
+                            <div class="about__card">
+                                <img src="/img/services/Card1.png" alt="oops">
+                                <div class="card__content">
+                                    <h3>Blah blah</h2>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+
     </main>
 </body>
 </html>
