--- a/index.html
+++ b/index.html
@@ -135,27 +135,37 @@
                             <div class="about__card">
                                 <img src="/img/services/Card1.png" alt="oops">
                                 <div class="card__content">
-                                    <h3>Aerospace Provider</h2>
+                                    <h3>Aerospace Provider</h3>
                                     <ul>
-                                        <li><i class="fas fa-caret-right"></i> Test</li>
-                                        <li><i class="fas fa-caret-right"></i> Test</li>
-                                        <li><i class="fas fa-caret-right"></i> Test</li>
-                                        <li><i class="fas fa-caret-right"></i> Test</li>
+                                        <li><i class="fas fa-caret-right"></i> When an unknown printer took.</li>
+                                        <li><i class="fas fa-caret-right"></i> Make a type speciemen book.</li>
+                                        <li><i class="fas fa-caret-right"></i> It has survived.</li>
+                                        <li><i class="fas fa-caret-right"></i> Airlines unknown speciemen.</li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="about__card">
                                 <img src="/img/services/Card1.png" alt="oops">
                                 <div class="card__content">
-                                    <h3>Blah blah</h2>
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                    <h3>Poppins Proved</h3>
+                                        <ul>
+                                            <li><i class="fas fa-caret-right"></i> When an unknown printer took.</li>
+                                            <li><i class="fas fa-caret-right"></i> Make a type speciemen book.</li>
+                                            <li><i class="fas fa-caret-right"></i> It has survived.</li>
+                                            <li><i class="fas fa-caret-right"></i> Airlines unknown speciemen.</li>
+                                        </ul>
                                 </div>
                             </div>
                             <div class="about__card">
                                 <img src="/img/services/Card1.png" alt="oops">
                                 <div class="card__content">
-                                    <h3>Blah blah</h2>
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                    <h3>Airline Speciemen</h3>
+                                        <ul>
+                                            <li><i class="fas fa-caret-right"></i> When an unknown printer took.</li>
+                                            <li><i class="fas fa-caret-right"></i> Make a type speciemen book.</li>
+                                            <li><i class="fas fa-caret-right"></i> It has survived.</li>
+                                            <li><i class="fas fa-caret-right"></i> Airlines unknown speciemen.</li>
+                                        </ul>
                                 </div>
                             </div>
                         </div>
@@ -164,6 +174,25 @@
             </div>
         </div>
         
+        <div class="client__body">
+            <div class="grid__container">
+                <div class="client__wrapper">
+                    <div class="client__form">
+                        <div class="client_form_top-btns">
+                            <button>Express</button>
+                            <button class="active">Logistics</button>
+                        </div>
+                        <div class="client_form_content">
+                            Smth
+                        </div>
+                        
+                    </div>
+                    <div class="client__image">
+                        img
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
 </body>
