--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="grid__container">
                 <div class="menu__items">
                     <div class="logo">
-                        <a href="#"><img src="/img/dhl-logo.png" alt="DHL"></a>
+                        <a href="#"><img src="img/dhl-logo.png" alt="DHL"></a>
                     </div>
                     <div class="menu__item">
                         <ul>
@@ -88,19 +88,19 @@
                     </div>
                     <div class="services__cards">
                         <div class="services__card">
-                            <img src="/img/services/Card1.png" alt="Card1">
+                            <img src="img/services/Card1.png" alt="Card1">
                             <h3>Express services</h3>
                             <p>When an unknown printer took a gallery of type and scrambled it to make a type specirmen</p>
                             <button>Read More <i class="fas fa-caret-right"></i></button>
                         </div>
                         <div class="services__card">
-                            <img src="/img/services/Card2.png" alt="Card1">
+                            <img src="img/services/Card2.png" alt="Card1">
                             <h3>Express services</h3>
                             <p>When an unknown printer took a gallery of type and scrambled it to make a type specirmen</p>
                             <button>Read More <i class="fas fa-caret-right"></i></button>
                         </div>
                         <div class="services__card">
-                            <img src="/img/services/Card3.png" alt="Card1">
+                            <img src="img/services/Card3.png" alt="Card1">
                             <h3>Express services</h3>
                             <p>When an unknown printer took a gallery of type and scrambled it to make a type specirmen</p>
                             <button>Read More <i class="fas fa-caret-right"></i></button>
@@ -133,7 +133,7 @@
                     <div class="grid__container">
                         <div class="about__cards-wrapper">
                             <div class="about__card">
-                                <img src="/img/services/Card1.png" alt="oops">
+                                <img src="img/services/Card1.png" alt="oops">
                                 <div class="card__content">
                                     <h3>Aerospace Provider</h3>
                                     <ul>
@@ -145,7 +145,7 @@
                                 </div>
                             </div>
                             <div class="about__card">
-                                <img src="/img/services/Card1.png" alt="oops">
+                                <img src="img/services/Card1.png" alt="oops">
                                 <div class="card__content">
                                     <h3>Poppins Proved</h3>
                                         <ul>
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                             <div class="about__card">
-                                <img src="/img/services/Card1.png" alt="oops">
+                                <img src="img/services/Card1.png" alt="oops">
                                 <div class="card__content">
                                     <h3>Airline Speciemen</h3>
                                         <ul>
