Reworked with grid container and some adaptive features

--- a/index.html
+++ b/index.html
@@ -183,17 +183,111 @@
                             <button class="active">Logistics</button>
                         </div>
                         <div class="client_form_content">
-                            Smth
+                            <div class="client_form-menu_item">
+                                <div class="menu_item_title active">
+                                    <div>Track your shipment</div>
+                                    <button><i class="fas fa-chevron-down"></i></button>
+                                </div>
+                                <div class="menu_item_content">
+                                    <h3>International Services to Another Country</h3>
+                                    <ul>
+                                        <li><i class="fas fa-caret-right"></i> Emergency</li>
+                                        <li><i class="fas fa-caret-right"></i> Time Critical</li>
+                                        <li><i class="fas fa-caret-right"></i> Less Urgent</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="client_form-menu_item">
+                                <div class="menu_item_title">
+                                    <div>Track your shipment</div>
+                                    <button><i class="fas fa-chevron-down"></i></button>
+                                </div>
+                            </div>
+                            <div class="client_form-menu_item">
+                                <div class="menu_item_title">
+                                    <div>Track your shipment</div>
+                                    <button><i class="fas fa-chevron-down"></i></button>
+                                </div>
+                            </div>
+                            <div class="client_form-menu_item">
+                                <div class="menu_item_title">
+                                    <div>Track your shipment</div>
+                                    <button><i class="fas fa-chevron-down"></i></button>
+                                </div>
+                            </div>
                         </div>
                         
                     </div>
                     <div class="client__image">
-                        img
+                        <div class="image-border"></div>
+                        <img src="img/filters/image-bg.png" alt="oh no...">
                     </div>
                 </div>
             </div>
         </div>
 
+        <div class="features__body">
+            <div class="grid__container">
+                <div>
+                    <h2>Excellence. Simply delivered.</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                        Aut incidunt deleniti debitis cumque earum dolorem velit, modi, tenetur dolores labore odit aperiam deserunt, 
+                        amet eaque voluptates totam quae unde rerum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates 
+                        cum ipsam praesentium sequi nulla illo quibusdam, consequuntur molestias qui tempore odio voluptas inventore repellat, 
+                        doloremque ut aut adipisci officiis ipsum?
+                    </p>
+                </div>
+                <button>Learn more</button>
+            </div>
+        </div>
+
+        <div class="clients__body">
+            <div class="grid__container">
+                <div class="clients__container">
+                    <div class="clients__wrapper"><img src="/img/clients/client.png" alt=""></div>
+                    <div class="clients__wrapper"><img src="/img/clients/client.png" alt=""></div>
+                    <div class="clients__wrapper"><img src="/img/clients/client.png" alt=""></div>
+                    <div class="clients__wrapper"><img src="/img/clients/client.png" alt=""></div>
+                </div>
+            </div>
+        </div>
     </main>
+
+    <footer>
+        <div class="footer_left"><img src="/img/footer/left-side-img.png" alt=""></div>
+        <div class="footer__content">
+            <div class="footer_item">
+                <h3>Contact Center</h3>
+                <ul>
+                    <li><i class="fas fa-caret-right"></i> DHL Express</li>
+                    <li><i class="fas fa-caret-right"></i> DHL Parcel & Ecomerce</li>
+                    <li><i class="fas fa-caret-right"></i> DHL Global Forwarding</li>
+                    <li><i class="fas fa-caret-right"></i> DHL Freight</li>
+                    <li><i class="fas fa-caret-right"></i> DHL Suply Chain</li>
+                </ul>
+            </div>
+            <div class="footer_item">
+                <h3>About us</h3>
+                <ul>
+                    <li><i class="fas fa-caret-right"></i> Partnership</li>
+                    <li><i class="fas fa-caret-right"></i> Company portrait</li>
+                    <li><i class="fas fa-caret-right"></i> DHL Global Forwarding</li>
+                    <li><i class="fas fa-caret-right"></i> Green solutions</li>
+                    <li><i class="fas fa-caret-right"></i> Innovation</li>
+                </ul>
+            </div>
+            <div class="footer_item">
+                <h3>Social Media</h3>
+                <ul>
+                    <li><i class="fas fa-caret-right"></i> FaceBook</li>
+                    <li><i class="fas fa-caret-right"></i> Dribble</li>
+                    <li><i class="fas fa-caret-right"></i> Behance</li>
+                    <li><i class="fas fa-caret-right"></i> Gmail</li>
+                    <li><i class="fas fa-caret-right"></i> Twitter</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer_right"><img src="/img/footer/right-side-image.png" alt=""></div>
+    </footer>
 </body>
 </html>
