--- a/index.html
+++ b/index.html
@@ -244,17 +244,17 @@
         <div class="clients__body">
             <div class="grid__container">
                 <div class="clients__container">
-                    <div class="clients__wrapper"><img src="/img/clients/client.png" alt=""></div>
-                    <div class="clients__wrapper"><img src="/img/clients/client.png" alt=""></div>
-                    <div class="clients__wrapper"><img src="/img/clients/client.png" alt=""></div>
-                    <div class="clients__wrapper"><img src="/img/clients/client.png" alt=""></div>
+                    <div class="clients__wrapper"><img src="img/clients/client.png" alt=""></div>
+                    <div class="clients__wrapper"><img src="img/clients/client.png" alt=""></div>
+                    <div class="clients__wrapper"><img src="img/clients/client.png" alt=""></div>
+                    <div class="clients__wrapper"><img src="img/clients/client.png" alt=""></div>
                 </div>
             </div>
         </div>
     </main>
 
     <footer>
-        <div class="footer_left"><img src="/img/footer/left-side-img.png" alt=""></div>
+        <div class="footer_left"><img src="img/footer/left-side-img.png" alt=""></div>
         <div class="footer__content">
             <div class="footer_item">
                 <h3>Contact Center</h3>
@@ -287,7 +287,7 @@
                 </ul>
             </div>
         </div>
-        <div class="footer_right"><img src="/img/footer/right-side-image.png" alt=""></div>
+        <div class="footer_right"><img src="img/footer/right-side-image.png" alt=""></div>
     </footer>
 </body>
 </html>
