--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
     <script src="https://kit.fontawesome.com/536e71b9bc.js" crossorigin="anonymous"></script>
 </head>
 <body>
+
+
+    <div class="modal__window__body" id="modal">
+        <div class="modal__overlay" onclick="showModalWindow()">
+
+        </div>
+        <div class="modal__content">
+            <div class="modal_content_body">
+                <div class="modal_form">
+                    <img src="img/dhl-logo.png" alt="dhl-logo" class="modal_logo">
+                    <button class="modal_exit_button" onclick="showModalWindow()">x</button>
+                    <div class="modal__desc">
+                        <h2>Directed By Alexander T.</h2>
+                        <h3>Nice to meet you!</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <header>
         <div class="navpanel">
             <div class="grid__container">
@@ -31,7 +52,7 @@
         <div class="main__menu">
             <div class="grid__container">
                 <div class="menu__items">
-                    <div class="logo">
+                    <div class="logo" onclick="showModalWindow()">
                         <a href="#"><img src="img/dhl-logo.png" alt="DHL"></a>
                     </div>
                     <div class="menu__item">
@@ -70,8 +91,8 @@
                             </ul>
                         </div>
                         <div class="slider__btns">
-                            <button>Learn More</button>
-                            <button>Dhl worldwide</button>
+                            <button onclick="showModalWindow()">Learn More</button>
+                            <button onclick="showModalWindow()">Dhl worldwide</button>
                         </div>
                     </div>
                 </div>
@@ -91,19 +112,19 @@
                             <img src="img/services/Card1.png" alt="Card1">
                             <h3>Express services</h3>
                             <p>When an unknown printer took a gallery of type and scrambled it to make a type specirmen</p>
-                            <button>Read More <i class="fas fa-caret-right"></i></button>
+                            <button onclick="showModalWindow()">Read More <i class="fas fa-caret-right"></i></button>
                         </div>
                         <div class="services__card">
                             <img src="img/services/Card2.png" alt="Card1">
                             <h3>Express services</h3>
                             <p>When an unknown printer took a gallery of type and scrambled it to make a type specirmen</p>
-                            <button>Read More <i class="fas fa-caret-right"></i></button>
+                            <button onclick="showModalWindow()">Read More <i class="fas fa-caret-right"></i></button>
                         </div>
                         <div class="services__card">
                             <img src="img/services/Card3.png" alt="Card1">
                             <h3>Express services</h3>
                             <p>When an unknown printer took a gallery of type and scrambled it to make a type specirmen</p>
-                            <button>Read More <i class="fas fa-caret-right"></i></button>
+                            <button onclick="showModalWindow()">Read More <i class="fas fa-caret-right"></i></button>
                         </div>
                         <div class="services__form">
                             <h3>Dhl worldwide</h3>
@@ -112,7 +133,7 @@
                                 <span>Location</span>
                                 <button><i class="fas fa-chevron-down"></i></button>
                             </div>
-                            <button>Explore</button>
+                            <button onclick="showModalWindow()">Explore</button>
                         </div>
                     </div>
                 </div>
@@ -184,7 +205,7 @@
                         </div>
                         <div class="client_form_content">
                             <div class="client_form-menu_item">
-                                <div class="menu_item_title active">
+                                <div class="menu_item_title" onclick="showClientForm(this)">
                                     <div>Track your shipment</div>
                                     <button><i class="fas fa-chevron-down"></i></button>
                                 </div>
@@ -198,21 +219,45 @@
                                 </div>
                             </div>
                             <div class="client_form-menu_item">
-                                <div class="menu_item_title">
+                                <div class="menu_item_title" onclick="showClientForm(this)">
                                     <div>Track your shipment</div>
                                     <button><i class="fas fa-chevron-down"></i></button>
                                 </div>
-                            </div>
-                            <div class="client_form-menu_item">
-                                <div class="menu_item_title">
-                                    <div>Track your shipment</div>
-                                    <button><i class="fas fa-chevron-down"></i></button>
+                                <div class="menu_item_content">
+                                    <h3>International Services to Another Country</h3>
+                                    <ul>
+                                        <li><i class="fas fa-caret-right"></i> Emergency</li>
+                                        <li><i class="fas fa-caret-right"></i> Time Critical</li>
+                                        <li><i class="fas fa-caret-right"></i> Less Urgent</li>
+                                    </ul>
                                 </div>
                             </div>
                             <div class="client_form-menu_item">
-                                <div class="menu_item_title">
+                                <div class="menu_item_title" onclick="showClientForm(this)">
                                     <div>Track your shipment</div>
                                     <button><i class="fas fa-chevron-down"></i></button>
+                                </div>
+                                <div class="menu_item_content">
+                                    <h3>International Services to Another Country</h3>
+                                    <ul>
+                                        <li><i class="fas fa-caret-right"></i> Emergency</li>
+                                        <li><i class="fas fa-caret-right"></i> Time Critical</li>
+                                        <li><i class="fas fa-caret-right"></i> Less Urgent</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="client_form-menu_item">
+                                <div class="menu_item_title" onclick="showClientForm(this)">
+                                    <div>Track your shipment</div>
+                                    <button><i class="fas fa-chevron-down"></i></button>
+                                </div>
+                                <div class="menu_item_content">
+                                    <h3>International Services to Another Country</h3>
+                                    <ul>
+                                        <li><i class="fas fa-caret-right"></i> Emergency</li>
+                                        <li><i class="fas fa-caret-right"></i> Time Critical</li>
+                                        <li><i class="fas fa-caret-right"></i> Less Urgent</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
@@ -237,7 +282,7 @@
                         doloremque ut aut adipisci officiis ipsum?
                     </p>
                 </div>
-                <button>Learn more</button>
+                <button onclick="showModalWindow()">Learn more</button>
             </div>
         </div>
 
@@ -289,5 +334,8 @@
         </div>
         <div class="footer_right"><img src="img/footer/right-side-image.png" alt=""></div>
     </footer>
+
+
+    <script src="scripts/script.js"></script>
 </body>
 </html>
